Entry becomes grey when waiting for deletion. (#5)
Entry becomes grey when waiting for deletion. (#5)

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,11 @@
   }
 }
 
+.waiting-for-deletion {
+  opacity: 0.5;
+  /* animation: fadeOut; */
+}
+
 /*
 .addbutton {
   animation-name: fadeIn;
